--- a/client/src/components/Login/_index.scss
+++ b/client/src/components/Login/_index.scss
@@ -2,38 +2,39 @@
 
 .login {
     @include box(100%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFFFFC;
+
+    @include flex(center, center, column);
+
+    background-color: var(--color-powder-blue);
 }
 
 .title {
-    font-size: 3.4rem;
     color: #313131;
+    font-size: 3.4rem;
 }
 
 .description {
-    font-size: 1.6rem;
-    color: #6f6f6f;
     margin: 0.5rem 0;
+    color: #6f6f6f;
+    font-size: 1.6rem;
 }
 
 .start {
-    font-size: 1.8rem;
     margin: 1rem 0;
     color: #5b9398;
+    font-size: 1.8rem;
 }
 
 .input {
     width: 20%;
-    font-size: 1.6rem;
     padding: 0.5rem 2rem;
-    border: 1px solid #A0C4FF;
-    border-radius: 5px;
-    box-shadow: 0 0 2px 0px;
     margin: 1rem 0;
+    box-shadow: 0 0 2px 0px;
+
+    border: 1px solid var(--color-cerulean-crayola);
+    border-radius: 5px;
+
+    font-size: 1.6rem;
 
     &:focus {
         outline: none;
@@ -41,14 +42,17 @@
 }
 
 .summit {
-    font-size: 1.8rem;
     padding: 0.5rem 1rem;
     margin: 1.5rem;
     border: none;
+
     background-color: transparent;
-    color: #f772f7;
-    cursor: pointer;
+    color: var(--color-blue-green);
+
+    font-size: 1.8rem;
     font-weight: 500;
+
+    cursor: pointer;
 
     &:focus {
         outline: none;
@@ -56,28 +60,33 @@
 }
 
 .remember {
-    display: flex;
-    align-items: center;
+    @include flex(inherit, center);
+
     font-size: 1.6rem;
 
     &_text {
-        color: #656565;
         margin: 0 0.5rem;
+        color: #656565;
     }
 }
 
 .signup {
-    font-size: 2rem;
     margin: 1.5rem 0;
+
+    color: var(--color-navy-blue);
+
+    font-size: 2rem;
     text-decoration: none;
 }
 
 .error {
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: #fff;
-    background-color: #ea2a2a;
-    padding: 0.5rem 1rem;
+    margin: $range-two 0;
+    padding: $range-one $range-two;
     border-radius: 4px;
-    margin: 1rem 0;
+
+    color: var(--color-powder-blue);
+    background-color: var(--color-navy-blue);
+
+    font-size: var(--font-size-large);
+    font-weight: bold;
 }
