--- a/client/src/scss/tools/_mixin.scss
+++ b/client/src/scss/tools/_mixin.scss
@@ -2,3 +2,10 @@
     width: $width;
     height: $height;
 }
+
+@mixin flex($justify: flex-start, $align: flex-start, $direction: row) {
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
+}
