Remove focust button click

--- a/client/src/components/ChatBox/_index.scss
+++ b/client/src/components/ChatBox/_index.scss
@@ -67,6 +67,10 @@
     transition: all .3s;
     cursor: not-allowed;
 
+    &:focus {
+        outline: none;
+    }
+
     &_active {
         color: var(--color-blue-green);
         cursor: pointer;
